// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Container /> should render with background gray 1`] = `
.c0 {
  margin: 0 auto;
  min-height: 100vh;
  width: 360px;
  background-color: #6b7688;
  color: #ffffff;
}

@media (min-width:481px) {
  .c0 {
    width: 481px;
  }
}

@media (min-width:780px) {
  .c0 {
    width: 780px;
  }
}

@media (min-width:1280px) {
  .c0 {
    width: 1280px;
  }
}

<div>
  <div
    class="c0"
  >
    <h1>
      Olá mundo
    </h1>
  </div>
</div>
`;

exports[`<Container /> should render with background white 1`] = `
.c0 {
  margin: 0 auto;
  min-height: 100vh;
  width: 360px;
  background-color: #ffffff;
  color: #030303;
}

@media (min-width:481px) {
  .c0 {
    width: 481px;
  }
}

@media (min-width:780px) {
  .c0 {
    width: 780px;
  }
}

@media (min-width:1280px) {
  .c0 {
    width: 1280px;
  }
}

<div>
  <div
    class="c0"
  >
    <h1>
      Olá mundo
    </h1>
  </div>
</div>
`;
